adding missed tags

--- a/welcome.html
+++ b/welcome.html
@@ -1,14 +1,21 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <!-- meta tags -->
+        <meta charset="UTF-8">
+        <meta name="description" content="Practice project for code up">
+        <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+        <meta name="author" content="Josh Markaksy">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <!-- title -->
         <title>Hello world</title>
 
     </head>
     <body>
         <!-- header -->
-        <h1>Welcome to Veridian Dynamics!</h1>
-        <p>At Veridian Dynamics, we solve your problems with technology</p>
+        <h1 id="#top">Welcome to Veridian Dynamics!</h1>
+        <p>At Veridian Dynamics, <strong>we</strong> solve your problems with <Strong>technology</Strong></p>
         <hr>
 
     <!-- List -->
@@ -66,6 +73,6 @@
 
         <p><em>All products comewith our quality gaurantee</em></p>
 
-        <h2><a href="#">Go To the Top of Page</a></h2>
+        <h2><a href="#top">Go To the Top of Page</a></h2>
     </body>
 </html>
