--- a/welcome.html
+++ b/welcome.html
@@ -11,10 +11,15 @@
         <!-- title -->
         <title>Hello world</title>
 
+        <!-- CSS links -->
+        <link type="text/css" rel="stylesheet" href="css/style.css">
+
+        <style></style>
+
     </head>
     <body>
         <!-- header -->
-        <h1 id="#top">Welcome to Veridian Dynamics!</h1>
+        <h1 class="fancy-header" id="#top">Welcome to Veridian Dynamics!</h1>
         <p>At Veridian Dynamics, <strong>we</strong> solve your problems with <Strong>technology</Strong></p>
         <hr>
 
