--- a/welcome.html
+++ b/welcome.html
@@ -14,13 +14,16 @@
         <!-- CSS links -->
         <link type="text/css" rel="stylesheet" href="css/style.css">
 
-        <style></style>
+        <!-- google font links -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     </head>
     <body>
         <!-- header -->
-        <h1 class="fancy-header" id="#top">Welcome to Veridian Dynamics!</h1>
-        <p>At Veridian Dynamics, <strong>we</strong> solve your problems with <Strong>technology</Strong></p>
+        <div class="container-header">
+            <h1 class="fancy-header" id="#top">Welcome to Veridian Dynamics!</h1>
+            <p>At Veridian Dynamics, <strong>we</strong> solve your problems with <Strong>technology</Strong></p>
+        </div>
         <hr>
 
     <!-- List -->
@@ -79,5 +82,7 @@
         <p><em>All products comewith our quality gaurantee</em></p>
 
         <h2><a href="#top">Go To the Top of Page</a></h2>
+
+        <br><br><br>
     </body>
 </html>
