finished bootstrap pizza web page

--- a/grid-layout.html
+++ b/grid-layout.html
@@ -76,6 +76,11 @@
                     <h2>1/8</h2>
                 </div>
             </div>
+            <div class="row">
+                <div class="two-thirds">
+                    <h2>2/3</h2>
+                </div>
+            </div>
             <!-- Last Section -->
             <div class="row">
                 <div class="one-fourth">
