--- a/functions_js.html
+++ b/functions_js.html
@@ -6,6 +6,6 @@
     <body>
 
         <script src="js/functions.js"></script>
-
+        <script src="js/functionsExtras.js"></script>
     </body>
 </html>
