--- a/external_js.html
+++ b/external_js.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 
-    <script src="js/external.js"></script>
+    <!--<script src="js/external.js"></script>-->
+    <script src="js/map-filter-reduce.js"></script>
 </body>
 </html>
