--- a/external_js.html
+++ b/external_js.html
@@ -6,6 +6,7 @@
 <body>
 
     <!--<script src="js/external.js"></script>-->
-    <script src="js/map-filter-reduce.js"></script>
+    <!--<script src="js/map-filter-reduce.js"></script>-->
+<script src="js/promises.js"></script>
 </body>
 </html>
